tests/rosetta/out/Fortran/carmichael-3-strong-pseudoprimes.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program carmichael_3_strong_pseudoprimes
  implicit none
  integer :: p1
    integer :: d
    integer :: s
    character(len=100) :: s0
    integer :: h3
          integer :: p2
          integer :: p3
          integer :: c
          character(len=100) :: s1
  print *, 'The following are Carmichael munbers for p1 <= 61:'//char(10)//''
  print *, 'p1     p2      p3     product'
  print *, '==     ==      ==     ======='
  do p1 = 2, 62
    if (isPrime(p1)) then
      call carmichael(p1)
    end if
  end do
  contains
  recursive integer function mod(n,m) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: m
    res = mod((((mod(n,m)) + m)),m)
    return
  end function mod
  recursive logical function isPrime(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = .false.
      return
    end if
    if ((mod(n,2) == 0)) then
      res = (n == 2)
      return
    end if
    if ((mod(n,3) == 0)) then
      res = (n == 3)
      return
    end if
    d = 5
    do while (((d * d) <= n))
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 2)
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 4)
    end do
    res = .true.
    return
  end function isPrime
  recursive character(len=100) function pad(n,width) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: width
    write(s0,'(G0)') n
    s = s0
    do while ((size(s) < width))
      s = ' ' // s
    end do
    res = s
    return
  end function pad
  recursive subroutine carmichael(p1)
    integer, intent(in) :: p1
    do h3 = 2, p1
      do d = 1, ((h3 + p1))
        if (mod((((mod(((((h3 + p1)) * ((p1 - 1)))),d) == 0) .and. mod((-p1 * p1),h3)) == d),h3)) then
          p2 = (1 + (((((p1 - 1)) * ((h3 + p1))) / d)))
          if (.not. isPrime(p2)) then
            cycle
          end if
          p3 = (1 + (((p1 * p2) / h3)))
          if (.not. isPrime(p3)) then
            cycle
          end if
          if ((mod(((p2 * p3)),((p1 - 1))) /= 1)) then
            cycle
          end if
          c = ((p1 * p2) * p3)
          write(s1,'(G0)') c
          print *, trim(trim(trim(trim(trim(pad(p1,2) // '   ') // pad(p2,4)) // '   ') // pad(p3,5)) // '     ') // s1
        end if
      end do
    end do
  end subroutine carmichael
end program carmichael_3_strong_pseudoprimes
